@@ -29,6 +29,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
@@ -120,7 +121,7 @@ public class Sentences2Associations  extends AbstractExtractor {
     @Override
     public String doBrowserExtract(BrowserExtractRequest request, Wandora wandora) throws TopicMapException {
         try {
-            basePath = new URL(request.getSource());
+            basePath = new URI(request.getSource()).toURL();
         }
         catch(Exception e) { e.printStackTrace(); }
         String s = super.doBrowserExtract(request, wandora);
@@ -211,7 +212,7 @@ public class Sentences2Associations  extends AbstractExtractor {
             log("Prosessing word stream!");
             int c = reader.read();
             word = new StringBuffer("");
-            ArrayList<String> words = new ArrayList();
+            ArrayList<String> words = new ArrayList<>();
 
 
             while(c != -1) {
@@ -269,7 +270,7 @@ public class Sentences2Associations  extends AbstractExtractor {
                                 }
                             }
                         }
-                        words = new ArrayList();
+                        words = new ArrayList<>();
                     }
                 }
                 while((isWordDelimiter(c) || isSentenceDelimiter(c)) && c != -1) {
